# Clean-Room-Legal-CLM

./: .gitignore  CODE_REVIEW_2026-05-19.md  PLAN.md  PLAN_AI_ARCHITECTURE.md  PLAN_AI_ARCHITECTURE_2.md  start.sh
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_contract_platform.py  0002_ai_architecture_spine.py  0003_phase2_hardening.py  0004_phase1_auth_foundation.py  0005_deployable_schema_and_project_shares.py  0005_schema_project_share.py  0006_audit_hash_chain.py  0007_drop_dead_contract_activity.py  0008_revoked_access_token.py
backend/app/: __init__.py  devtools.py  main.py  models.py
backend/app/admin/: __init__.py  routes.py
backend/app/ai/: __init__.py  citations.py  confirmations.py  context.py  controller.py  embeddings.py  errors.py  evals.py  fallback.py  models.py  prompt_builder.py  prompt_versions.py  redaction.py  registry.py  routes.py  schemas.py  service.py  skill.py  streaming.py  tool_registry.py  tool_runtime.py  usage.py  validation.py
backend/app/approvals/: models.py  (+3 more)
backend/clean_room_legal_clm_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: entrypoint.sh
backend/secrets/: docusign_private_key.pem
backend/tests/: test_ai_architecture_wiring.py  test_migration_deployability.py  test_phase10_security_hardening.py  test_phase1_auth_foundation.py  test_phase2_api_shapes.py  test_phase4_contract_lifecycle_hub.py  test_phase5_playbooks.py  test_phase6_9_integration.py
(+151 files in other folders)
